{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1821,
  "lineage": "b8c55d15-8e34-f0a3-f6fc-76fb915edd1c",
  "resources": [
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:loadbalancer/app/services-app-lb/e1f27ec7664332d6",
            "arn_suffix": "app/services-app-lb/e1f27ec7664332d6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "services-app-lb-1809485821.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:loadbalancer/app/services-app-lb/e1f27ec7664332d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "services-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09cc85e227a56ee75",
              "sg-0f265f4f1c3fd1b29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00e6c693997974633"
              },
              {
                "subnet_id": "subnet-0d9f0290af7d56615"
              },
              {
                "subnet_id": "subnet-0f5728c2347f87fa8"
              }
            ],
            "subnets": [
              "subnet-00e6c693997974633",
              "subnet-0d9f0290af7d56615",
              "subnet-0f5728c2347f87fa8"
            ],
            "vpc_id": "vpc-07e35231434033726",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "load_balancer_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/d9583902663d8785",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/lighting-target-group/e360510b02192460",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/d9583902663d8785",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:loadbalancer/app/services-app-lb/e1f27ec7664332d6",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.load_balancer",
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/dc81114943438547",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/heating-target-group/774c1987ba49883b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/dc81114943438547",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:loadbalancer/app/services-app-lb/e1f27ec7664332d6",
            "port": 3001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.load_balancer",
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/3cfc4ea32ee5f187",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/status-target-group/c1c22e7f7752fe03",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:listener/app/services-app-lb/e1f27ec7664332d6/3cfc4ea32ee5f187",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:loadbalancer/app/services-app-lb/e1f27ec7664332d6",
            "port": 3002,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.load_balancer",
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/lighting-target-group/e360510b02192460",
            "arn_suffix": "targetgroup/lighting-target-group/e360510b02192460",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lighting/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/lighting-target-group/e360510b02192460",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lighting-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/heating-target-group/774c1987ba49883b",
            "arn_suffix": "targetgroup/heating-target-group/774c1987ba49883b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/heating-target-group/774c1987ba49883b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/status-target-group/c1c22e7f7752fe03",
            "arn_suffix": "targetgroup/status-target-group/c1c22e7f7752fe03",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/status-target-group/c1c22e7f7752fe03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/lighting-target-group/e360510b02192460-20231213145939614500000005",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/lighting-target-group/e360510b02192460",
            "target_id": "i-0bdad62693fc2808b"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.aws_instance.services",
            "module.services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/heating-target-group/774c1987ba49883b-20231213145939592400000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/heating-target-group/774c1987ba49883b",
            "target_id": "i-0c6a1fa2574f0f90c"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.aws_instance.services",
            "module.services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/status-target-group/c1c22e7f7752fe03-20231213145939637300000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:190521790599:targetgroup/status-target-group/c1c22e7f7752fe03",
            "target_id": "i-0ad644b57b9b45a89"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.services_target_group",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.aws_instance.services",
            "module.services.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:internet-gateway/igw-01bb1e74032383ddd",
            "id": "igw-01bb1e74032383ddd",
            "owner_id": "190521790599",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-igw"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bb1e74032383ddd",
            "id": "r-rtb-076b15913dd991c3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076b15913dd991c3d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bb1e74032383ddd",
            "id": "r-rtb-076b15913dd991c3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076b15913dd991c3d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01bb1e74032383ddd",
            "id": "r-rtb-076b15913dd991c3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076b15913dd991c3d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:route-table/rtb-076b15913dd991c3d",
            "id": "rtb-076b15913dd991c3d",
            "owner_id": "190521790599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bb1e74032383ddd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35231434033726"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182b426a632bdd1c",
            "route_table_id": "rtb-076b15913dd991c3d",
            "subnet_id": "subnet-0d9f0290af7d56615"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009fc5554256331ef",
            "route_table_id": "rtb-076b15913dd991c3d",
            "subnet_id": "subnet-0f5728c2347f87fa8"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d072a14598a7262",
            "route_table_id": "rtb-076b15913dd991c3d",
            "subnet_id": "subnet-00e6c693997974633"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-0f2686a1ffda3d68d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2686a1ffda3d68d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2a"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-0ea74724047383b5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea74724047383b5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2b"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-0afcf397585a9fcdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afcf397585a9fcdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-private-eu-west-2c"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-0d9f0290af7d56615",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9f0290af7d56615",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2a"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-0f5728c2347f87fa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5728c2347f87fa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2b"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:subnet/subnet-00e6c693997974633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e6c693997974633",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190521790599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "project-public-eu-west-2c"
            },
            "vpc_id": "vpc-07e35231434033726"
          },
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:vpc/vpc-07e35231434033726",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-072f5a9fc5817f169",
            "default_route_table_id": "rtb-09e373e2f6aa784ff",
            "default_security_group_id": "sg-058294481e2f68a05",
            "dhcp_options_id": "dopt-023a75e0781b8c3a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e35231434033726",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e373e2f6aa784ff",
            "owner_id": "190521790599",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_and_https_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group/sg-09cc85e227a56ee75",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09cc85e227a56ee75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_and_https_sg",
            "name_prefix": "",
            "owner_id": "190521790599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http_and_https_sg"
            },
            "tags_all": {
              "Name": "http_and_https_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35231434033726"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group/sg-0f265f4f1c3fd1b29",
            "description": "Allow SSH traffic from my IP",
            "egress": [],
            "id": "sg-0f265f4f1c3fd1b29",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.153.206.253/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "190521790599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_sg"
            },
            "tags_all": {
              "Name": "ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35231434033726"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_port_ipv4_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0d3c6df4fcd8527c1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0d3c6df4fcd8527c1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-0d3c6df4fcd8527c1",
            "tags": null,
            "tags_all": {},
            "to_port": 3002
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_port_ipv6_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0bbf82abcf3fedac1",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-0bbf82abcf3fedac1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-0bbf82abcf3fedac1",
            "tags": null,
            "tags_all": {},
            "to_port": 3002
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "http_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-00f8e170a8c87b691",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00f8e170a8c87b691",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-00f8e170a8c87b691",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "https_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-073f0024144538bdc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-073f0024144538bdc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-073f0024144538bdc",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv4_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0775bf7e012af0e2d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0775bf7e012af0e2d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-0775bf7e012af0e2d",
            "tags": null,
            "tags_all": {},
            "to_port": 3002
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port_ipv6_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-08aadf550d9277e85",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-08aadf550d9277e85",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-08aadf550d9277e85",
            "tags": null,
            "tags_all": {},
            "to_port": 3002
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0bd82986c2d7468e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0bd82986c2d7468e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-0bd82986c2d7468e7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0cf4a8b646cd18309",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cf4a8b646cd18309",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09cc85e227a56ee75",
            "security_group_rule_id": "sgr-0cf4a8b646cd18309",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:190521790599:security-group-rule/sgr-0a7c8145845482c75",
            "cidr_ipv4": "109.153.206.253/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a7c8145845482c75",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f265f4f1c3fd1b29",
            "security_group_rule_id": "sgr-0a7c8145845482c75",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:190521790599:instance/i-0bdad62693fc2808b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bdad62693fc2808b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "octopus",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b52a82b938f275a",
            "private_dns": "ip-10-0-0-60.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.60",
            "public_dns": "ec2-3-8-6-157.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.6.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d33b89b3d89fd332",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9f0290af7d56615",
            "tags": {
              "Name": "lighting-service"
            },
            "tags_all": {
              "Name": "lighting-service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cc85e227a56ee75",
              "sg-0f265f4f1c3fd1b29"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:190521790599:instance/i-0c6a1fa2574f0f90c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6a1fa2574f0f90c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "octopus",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b97840de15147f16",
            "private_dns": "ip-10-0-1-220.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-35-177-118-216.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.118.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5e5bb469cb6bc81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5728c2347f87fa8",
            "tags": {
              "Name": "heating-service"
            },
            "tags_all": {
              "Name": "heating-service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cc85e227a56ee75",
              "sg-0f265f4f1c3fd1b29"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05eb46f888200e84d",
            "arn": "arn:aws:ec2:eu-west-2:190521790599:instance/i-0ad644b57b9b45a89",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad644b57b9b45a89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "octopus",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b68a2cfecb0713f",
            "private_dns": "ip-10-0-2-92.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.92",
            "public_dns": "ec2-35-178-230-123.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.230.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d8f9ca705c5d5c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e6c693997974633",
            "tags": {
              "Name": "status-service"
            },
            "tags_all": {
              "Name": "status-service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cc85e227a56ee75",
              "sg-0f265f4f1c3fd1b29"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project",
            "module.security.aws_security_group.http_and_https_sg",
            "module.security.aws_security_group.ssh_sg",
            "module.services.data.aws_ami.ubuntu"
          ]
        }
      ]
    }
  ]
}